tests/binary/errors/offset_negative.dby
import std.binary as bin

let data: bytes = b"\x00\x01"
print(bin.u16_le(data, -1))
